# marmalade

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  deny.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
assets/: main.sass
assets/bulma/sass/components/: _all.sass
assets/bulma/sass/elements/: _all.sass  box.sass  content.sass  notification.sass
assets/bulma/sass/form/: _all.sass
assets/bulma/sass/helpers/: _all.sass
assets/bulma/sass/utilities/: derived-variables.sass
assets/firacode/: firacode.scss
assets/fontawesome/scss/: solid.scss
src/: cookies.rs  de.rs  dirs.rs  extract.rs  handlers.rs  main.rs  middleware.rs  models.rs  redirect.rs  repositories.rs  response.rs  routes.rs  ser.rs  session.rs  settings.rs  templates.rs  validate.rs
src/handlers/: admin.rs  assets.rs  auth.rs  git.rs  mod.rs  repo.rs  user.rs
src/repositories/: mod.rs  repo.rs  settings.rs  user.rs
src/templates/: admin.rs  mod.rs  repo.rs  user.rs
templates/: base.html  error.html  index.html  login.html  nav.html  register.html  show.html
templates/admin/: settings.html
templates/repo/: create.html  delete.html  index.html  settings.html  tree.html
templates/user/: index.html  list.html  settings.html
