[package]
name = "marmalade"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.79"
argon2 = { version = "0.5.3", features = ["std"] }
askama = { version = "0.12.1", default-features = false, features = ["urlencode", "with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.4", features = ["http2"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
camino = "1.1.6"
cookie = { version = "0.18.0", features = ["private"] }
futures-util = "0.3.30"
git2 = { version = "0.18.1", default-features = false }
hex = "0.4.3"
mime = "0.3.17"
once_cell = "1.19.0"
percent-encoding = "2.3.1"
pulldown-cmark = { version = "0.9.6", default-features = false }
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
syntect = "5.1.0"
tokio = { version = "1.35.1", features = ["macros", "fs", "process", "rt-multi-thread", "sync"] }
tokio-shutdown = "0.1.4"
tokio-util = { version = "0.7.10", features = ["io"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["compression-gzip", "decompression-gzip", "trace", "util"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
unidirs = "0.1.1"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
whoami = "1.4.1"

[dev-dependencies]
serde_test = "1.0.176"

[build-dependencies]
grass = { version = "0.13.1", default-features = false }
proc-macro2 = "1.0.78"
quote = "1.0.35"
syntect = "5.1.0"

[profile.release]
lto = true
strip = true
